--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.jpa.hibernate.ddl-auto=create
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8092/realms/awarehouse
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri= ${spring.security.oauth2.resourceserver.jwt.issuer-uri}/protocol/openid-connect/certs
 keycloak.client.id=awarehouse-rest-api
+selenium.grid.url=http://localhost:4444/wd/hub
