added function, which adds products

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/awarehouse
 spring.jpa.show-sql=true
 spring.datasource.username=awarehouse
 spring.datasource.password=awarehouse
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8092/realms/awarehouse
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri= ${spring.security.oauth2.resourceserver.jwt.issuer-uri}/protocol/openid-connect/certs
 keycloak.client.id=awarehouse-rest-api
