--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8092/realm
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri= ${spring.security.oauth2.resourceserver.jwt.issuer-uri}/protocol/openid-connect/certs
 keycloak.client.id=awarehouse-rest-api
 selenium.grid.url=http://localhost:4444/wd/hub
+rabbitmq.exchange.name=awarehouse
+rabbitmq.queue.report.name=reportQueue
+rabbitmq.queue.report.key=reportKey
