added report creation functionality

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ selenium.grid.url=http://localhost:4444/wd/hub
 rabbitmq.exchange.name=awarehouse
 rabbitmq.queue.report.name=reportQueue
 rabbitmq.queue.report.key=reportKey
+rabbitmq.queue.mail.name=mailQueue
+rabbitmq.queue.mail.key=mailKey
