--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,7 @@ rabbitmq.queue.report.name=reportQueue
 rabbitmq.queue.report.key=reportKey
 rabbitmq.queue.mail.name=mailQueue
 rabbitmq.queue.mail.key=mailKey
+keycloak.auth-server-url=http://localhost:8092
+keycloak.realm=awarehouse
+keycloak.resource=awarehouse-rest-api
+keycloak.credentials.secret=eF77EiNF10sE0RHCvn5j9KVEZX2Kfv9W
