--- a/pom.xml
+++ b/pom.xml
@@ -144,7 +144,11 @@
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
             <version>3.2.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-csv</artifactId>
+            <version>1.8</version>
+        </dependency>
     </dependencies>
 
     <build>
