fixed tests and other small refactors

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,4 +16,5 @@ keycloak.auth-server-url=http://localhost:8092
 keycloak.realm=awarehouse
 keycloak.resource=awarehouse-rest-api
 keycloak.credentials.secret=eF77EiNF10sE0RHCvn5j9KVEZX2Kfv9W
-#keycloak.cors=true
+scheduling.enabled=true
+scheduling.cron=0 * * * * *
